--- a/index.html
+++ b/index.html
@@ -3,23 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Bruno Pereira</title>
 </head>
 <body>
-    <main>
-        <nav>
-            <ul>
-                <li class="nav-item">Sobre mim</li>
-                <li class="nav-item">Projetos</li>
-                <li class="nav-item">Curriculo</li>
-                <li class="nav-item">Contato</li>
-            </ul>
+    <header>
+        <nav class="nav-bar">
+            <div class="logo">
+                <h1>Bruno Pereira</h1>
+            </div>
+            <div class="nav-list">
+                <ul>
+                    <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
+                </ul>
+            </div>
         </nav>
-        <section class="">Sobre mim</section>
-        <section class="">Curriculo</section>
-        <section class="">Projetos</section>
-        <section class="">Contatos</section>
-        <floter></floter>
-    </main>
+    </header>
+    <div class="sec">
+        <section id="sobre">
+            <h2>Sobre mim:</h2>
+            <p>Atualmente sou estudante de análise e desenvolvimento de sistemas pelo ifma de Coelho Neto.</p>
+        </section>
+
+        <section id="proj">
+            <h2>Projetos:</h2>
+            <p>Ainda não possuo nenhum projeto.</p>
+        </section>
+
+        <section id="cont">
+            <h2>
+                Contato:
+            </h2>
+            <p>
+                <b>E-mail:</b> brunopereira@acad.ifma.edu.br
+            </p>
+        </section>
+    </div>
 </body>
 </html>
